AUS-3200 Stop scrollbars pushing sidebar buttons out of line

--- a/ui/src/app/layout/modelview/components/sidebar/sidebar.component.scss
+++ b/ui/src/app/layout/modelview/components/sidebar/sidebar.component.scss
@@ -203,7 +203,7 @@ i.fa.fa-lg.fa-eye, i.fa.fa-lg.fa-compress {
 }
 
 #modelControlsDiv {
-    padding: 0.6em 1em 1em 1em;
+    padding: 0.6em 1em 1em 0.4em;
 }
 
 .btn-sm {
